style.css
:root {
    --light-green: #55AC7B;
    --dark-green: #0B2B10;
    --green: rgba(249, 249, 249, 0.06);
}

html {
    scroll-behavior: smooth;
}

* {
    /* outline: 1px solid #f00 !important; */
    box-sizing: border-box;
}

body {
    font-family: "Roboto", sans-serif;
    margin: 0;
    padding: 0;

}

footer {
    padding: 1px 45px;
    background-color: var(--light-green);
    color: white;
}

nav {
    background-color: var(--light-green);
    margin: 0;
}


a {
    text-decoration: none;
    color: unset;
}

h2 {
    font-size: 30px;
    font-weight: 400; 
}

h3 {
    font-size: 25px;
    font-weight: 400;
}
p {
    font-size: 20px;
}

  button {
    background-color: var(--light-green);
    padding: 10px 20px;
    color: white;
    border: none;
  }

  input,
textarea {
  background-color: transparent;
  border: #f6e0db 1px solid;
  height: 15px;
  font-size: 18px;
  border-width: 0;
  padding: 0;
  margin: 0;
  width: 100%;
  vertical-align: middle;
  outline: none;
}

::placeholder {
  font-size: 18px;
}

#home {
    padding: 48px;
    background-color: var(--light-green);
    color: white;
    margin: 0;
    /* position: relative; */
    transform: translateY(-2px);
    z-index: -12;
}

#download {
    padding: 76px 40px;

}

#getInTouch {
    padding: 0px 40px;
}

#about {
    margin: 150px 0px 32px 0px;
    background-color: var(--light-green);
}

#catapult-express {
    padding: 100px 40px;
}

.opaque {
    opacity: 0.4;
    z-index: 400;
}

.container {
   opacity: 1;
   z-index: -300;
}

nav ul {
    background-color: white;
    color: black;
    list-style: none;
    position: absolute;
    top: 0;
    left: 0;
    margin: 0;
    height: 470px;
    width: 302px;
    border-radius: 10px;
    font-size: 20px;
    text-align: center;
    padding: 45px;
    /* opacity: 0; */
}

nav li {
    padding: 25px;
}

.nav-download {
    background-color: var(--light-green);
    color: white;
    padding: 0px;
    height: 41px;
    line-height: 41px;
width: 152px;
margin: 25px auto;
}

.open {
    display: block;
    z-index: 200;
    opacity: 1;
}

.close, .logo {
    display: none;
}

.move {
    position: relative;
    transform: translate(82%, 72%);
    z-index: 100;
}

/* .mobile10 {
    position: relative;
    transform: translate(10%, 10%);
} */

/* #home p {
    font-size: 30px;
} */

.green {
    text-align: center;
    color: var(--light-green);
}

.tac {
    text-align: center;
}

.tal {
    text-align: left;
    margin:0px 72px 10px 34px;
    width: 324px;
    display: block;
}

.auto {
    margin: auto;
}

.rel {
    position: relative;
}

footer h6 {
    text-align: center;
    font-size: 16px;
    font-weight: 400;
    margin: 22px 0px;
}

footer p {
    text-align: center;
    font-size: 15px;
    opacity: 0.6;
    margin: 29px 0px;
}
.app {
  margin-left: 3px;
}

.app > p {
    margin: 0;
    font-size: 12px;
}



.app > h4 {
    margin: 0;
    font-size: 16px;
}

#contact p, #getInTouch p {
    font-size: 18px;
}

#download p {
    font-size: 22px;
}

.delivery {
    height: 222px;
    width: 100%;
}

.delivery > img {
    height: 222px;
    width: 100%;
}

.iphone {
    display: block;
    margin-bottom: 70px;
    transform: translateX(-8%);
}

.iphone > img {
        width: 100%;
        height: 100%;
}

.rect {
    width: 85%;
    display: block;
    margin: 0 auto 50px auto;
    position: absolute;
    transform: translate(9%, -28%);
}

.messenger {
    display: block;
    margin: 0 auto 50px auto;
    width: 50%;
}

.character {
    width: 42%;
    display: block;
    margin: auto;
}

.logistics {
    width: 57%;
    display: block;
    margin: auto;
    padding-bottom: 56px;
}
.messenger img, .character img, .logistics img, .rect img {
    width: 100%;
    height: auto;
    object-fit: scale-down;
}

.desktop {
    display: none;
}

.m47 {
    margin: 47px 0px;
}

.pad10 {
    padding: 0 10px;
}

.pad22 {
    padding: 0 22px;
}

.pad20 {
    padding:20px;
}

.r-flex {
    display: flex;
    justify-content: center;

}

.card {
    /* background-color: #721C09; */
    background: #FFF8F8;
    width: 90%;
    padding: 32px 29px;
    margin: 19px auto;
    height: 288px;
border-radius: 10px;
}

.card2 {
    margin: 52px 0;
    display: block;
}

.row-flex > a {
    background-color: white;
  border-radius: 8px;
  color: #000;
  padding: 9px 10px;
  width: 150px;
}

.res-flex {
    display: grid;
    grid-gap: 30px;
    align-items: center;
    justify-content: center;
}

.gap-10 {
    gap: 10px;
}

.row-flex {
    display: grid;
    grid-auto-flow: column;
    justify-content: start;
}

.fFlex {
    display: flex;
    flex-direction: row;
    align-items: center;
    margin: 0px -10px;
  }
  
  .fFlex > div {
    margin: 0px 10px;
  }

  .lMargin {
    margin-left: 20px;
  }

.center {
    margin: auto;
    text-align: center;
  }

  .center2 {
    margin: auto;
    text-align: center;
  }

  .centre {
    margin: 0 auto;
    display: block;
  }

/* .col-flex {
    display: grid;
  justify-items: center;
  gap: 14px;
} */

.cFlex {
    display: grid;
    justify-items: center;
    gap: 14px;
  }
  
  .cFlex > .bac {
    background-color: var(--dark-green);
    display: flex;
    padding: 0 30px;
    height: 129px;
    color: #F6E0DBB2;
    width: 100%;
  }

  .fFlex > .pad {
    padding: 14px 5px;;
    border-radius: 20px;
    background-color: #f6e0db;
  }

  .send-mail {
    margin: 0px 0 6px 0;
    opacity: 70%;

  }

  /* .btn {
    text-align: center;
    padding: 5px 9px;
  } */
  
  .btn > button {
    font-size: 22px;
    color: white;
    width: 100%;
    height: 66px;
    background-color: var(--light-green);
  }

  .text,
.description {
  line-height: 23px;
  letter-spacing: -0.01em;
  margin: 18px 0;
  border: 1px solid#0A0706;
  height: 66px;
  padding: 17px 10px 17px 25px;
  background: transparent;
  width: 100%;
}

.description {
  height: 133px !important;
  line-height: 100px;
  padding: 15px 10px 0px 25px;
}

@media screen and (min-width: 1000px) {
    h4, h2 {
        font-weight: 700;
font-size: 25px;
text-transform: uppercase;
text-align: center;
    }

    button {
        padding: 15px 30px;
    }

    #catapult-express {
        padding: 100px 227px;
    }

    #about {
        margin: 0px;
        background: transparent;
        height: 912px;
        position: relative;
    }

    #about::before {
        content: '';
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 912px;
        background-color: var(--light-green);
        clip-path: polygon(86.1% 0%, 100% 0%, 100% 28.1%, 35% 100%, 0% 100%, 0% 96.1%);
        z-index: -5;
    }
    #join-us {
       max-height: 566px;
    }
    #getInTouch {
        background-color: var(--dark-green);
        padding: 20px 20px;
        color: white;
        padding: 20px 20px 117px 20px;
    }

    .res-flex {
        grid-auto-flow: column;
        /* justify-content: space-between; */
    }
    #home {

        padding: 100px;
    }
    
    .text, .description {
        border: 1px solid #F6E0DB;
    } 
    .btn > button {
        background-color: white;
        color: #721C09;
    }
    .desktop {
        display: block;
    }
    .delivery {
        height: 500px;
width: 500px;
  }

  .delivery > img {
    height: auto;
}

.mobile {
    display: none;
}

  #home p{
    max-width: 554px;
  }

  .iphone {
    height: 700px;
  }

  .iphone > img {
    height: 100%;
    width: auto;
  }

  .omo {
    text-align: left;
    height: 100px;
  }

  .center2 {
    display: flex;
    flex-direction: column;
    height: 700px;
    width: 428px;
    justify-content: space-around;
  }

  .h328 {
    position: absolute;
    z-index: -20;
    height: 328px;
    background-color: var(--dark-green);
    width: 100%;
    transform: translateY(-210px);
  }

  .card {
    height: 360px;
  }

.pr-25 {
    font-size: 22px;
    width: 324px;
    /* height: 104px; */
}

.row-flex > a {
    height: 68px;
    width: 220px;
    border-radius: 12px;
    
} 
.app > p {
    font-size: 19px;
}

.app > h4 {
    font-size: 22px;
    text-transform: none;
    text-align: left;
}
.applogo {
    width: 50px;
    height: 50px;
}

.applogo > img {
    width: 100%;
    height: 100%;
}
.head {
font-size: 50px;
font-weight: 400;
line-height: 59px;
text-align: left;
text-transform: none;
}

.messenger {
    position: absolute;
    display: block;
    margin: 0 auto 50px auto;
    width: 50%;
    transform: translate(90%, -80%);
}

.character {
    position: absolute;
    width: 42%;
    display: block;
    margin: auto;
    transform: translate(140%, -16%);
}

.logistics {
    position: absolute;
    width: 57%;
    display: block;
    margin: auto;
    padding-bottom: 56px;
     transform: translate(22%, -35%);
}
.messenger img, .character img, .logistics img, .rect img {
    width: 100%;
    height: auto;
    object-fit: scale-down;
}

.behind {
    transform: translate(59%, 4%);
}

.cFlex > .bac {
    background-color: var(--green);
}


.m-74 {
    margin: 65px;
} 
.hm67 {
    margin: 0 67px;
    justify-content: space-evenly;
}
.tal {
    transform: translate(74%, 198%);
    display: flex;
    flex-direction: column;
    align-items: flex-start;
} .auto {
    margin:0px 72px 10px 34px;
}
.jcs {
    justify-content: space-evenly;
    align-items: flex-start;
}

  }

  @media screen and (min-width: 900px) {
nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0px 59px;
}

nav ul {
    z-index: 45678;
    position: relative;
    background-color: unset;
    color: white;
    width: fit-content;
    height: fit-content;
    font-size: 12px;
}

nav li {
    display: inline;
}
.nav-download {
    background-color: white;
    color: black;
    padding: 10px 10px;
}
.logo {
    display: block;
    position: relative;
    transform: translateY(23px);
}
.mobile10 {
    display: none;
}
.destop10, .close, .open {
    display: block;
}
  }

